# cert-revocation-lab

./: .env  .env.example  .gitignore  .gitlab-ci.yml  .sops.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  federation-compose.yml  freeipa-compose.yml  lab  pki-compose.yml  pki-ecc-compose.yml  pki-pq-compose.yml  podman-compose.yml  post-deploy-validate.sh  preflight-check.sh  pyproject.toml  reset-lab.sh  secrets.enc.yaml  setup-prerequisites.sh  start-lab.sh  stop-lab.sh  test-revocation.sh  validate-lab.sh
.archive/: README.md
.archive/bash-scripts/: export-chain.sh  post-deploy-validate.sh  preflight-check.sh  validate-lab.sh
.archive/unused-playbooks/: check-revocation-status.yml  revoke-cert-simple.yml  webhook-events.yml
ansible/: ansible.cfg
ansible/collections/: requirements.yml
ansible/inventory/: hosts.yml  pki_hosts.yml  semaphore.yml
ansible/playbooks/: check-revocation-status.yml  device-enrollment.yml  sign-csr.yml  (+15 more)
docs/: scenarios.md  services.md
lab_cli/: __init__.py  advanced_tests.py  cli.py  config.py  events.py  pki.py  protocols.py  services.py  validate.py
notebooks/: 01_kafka_event_viewer.ipynb  02_revocation_dashboard.ipynb  03_pki_health_monitor.ipynb  04_security_event_simulator.ipynb  05_iot_device_lifecycle.ipynb  06_performance_analysis.ipynb  07_eda_rule_explorer.ipynb  08_zero_trust_lab_guide.ipynb
scripts/: chaos-test.sh  compliance-scan.py  debug-rest-api.sh  decrypt-secrets.sh  eda-entrypoint.sh  export-all-admin-creds.sh  gitops-reconcile.py  kmip-manage.py  lib-common.sh  list-certs.sh  load-test.py  perf-test.py  pki-cli.py  requirements.txt  revoke-cert.sh  revoke-via-podman-api.py  setup-admin-nssdb.sh  setup-dns.sh  setup-eda-auth.sh  setup-eda-ssh.sh  setup-gitlab-runner.sh  setup-lab-user.sh  setup-semaphore.sh  setup-sops.sh  teardown-gitlab-runner.sh  test-revocation-e2e.sh  test-revoke-api.sh
(+156 files in other folders)
